ADD_SUBDIRECTORY(Auth)
ADD_SUBDIRECTORY(Auth_DB)
ADD_SUBDIRECTORY(Auth_Remote)
ADD_SUBDIRECTORY(DB)
ADD_SUBDIRECTORY(DB_MariaDB)
ADD_SUBDIRECTORY(DB_PostgreSQL)
ADD_SUBDIRECTORY(DB_SQLite3)
ADD_SUBDIRECTORY(FS_Vars)
ADD_SUBDIRECTORY(Helpers)
ADD_SUBDIRECTORY(Memory)
ADD_SUBDIRECTORY(Net_Chains)
ADD_SUBDIRECTORY(Net_Interfaces)
ADD_SUBDIRECTORY(Net_Sockets)
ADD_SUBDIRECTORY(Program_Logs)
ADD_SUBDIRECTORY(Program_Service)
ADD_SUBDIRECTORY(Protocol_HTTP)
ADD_SUBDIRECTORY(Protocol_LineRecv)
ADD_SUBDIRECTORY(Protocol_MIME)
ADD_SUBDIRECTORY(RPC_ClientAPP)
ADD_SUBDIRECTORY(RPC_Common)
ADD_SUBDIRECTORY(RPC_Fast)
ADD_SUBDIRECTORY(RPC_Fast2)
ADD_SUBDIRECTORY(RPC_Templates)
ADD_SUBDIRECTORY(RPC_WebServer)
ADD_SUBDIRECTORY(Scripts_JSONExprEval)
ADD_SUBDIRECTORY(Threads)
