ADD_SUBDIRECTORY(Helpers)
ADD_SUBDIRECTORY(DataFormat_JWT)
ADD_SUBDIRECTORY(Threads)
ADD_SUBDIRECTORY(Sessions)
ADD_SUBDIRECTORY(Memory)
ADD_SUBDIRECTORY(DB)
ADD_SUBDIRECTORY(DB_MariaDB)
ADD_SUBDIRECTORY(DB_PostgreSQL)
ADD_SUBDIRECTORY(DB_SQLite3)
# TODO: MOVE TO Helpers?
ADD_SUBDIRECTORY(FileFormats)
ADD_SUBDIRECTORY(Net_Interfaces)
ADD_SUBDIRECTORY(Net_Sockets)
ADD_SUBDIRECTORY(Net_Chains)
ADD_SUBDIRECTORY(Program_Logs)
ADD_SUBDIRECTORY(Program_Service)
ADD_SUBDIRECTORY(Protocol_HTTP)
ADD_SUBDIRECTORY(Protocol_LineRecv)
ADD_SUBDIRECTORY(Protocol_MIME)
ADD_SUBDIRECTORY(App_FastRPC1Client)
ADD_SUBDIRECTORY(API_Monolith)
ADD_SUBDIRECTORY(API_RESTful)
ADD_SUBDIRECTORY(Protocol_FastRPC1)
ADD_SUBDIRECTORY(Protocol_FastRPC3)
ADD_SUBDIRECTORY(Server_RESTfulWebAPI)
ADD_SUBDIRECTORY(Server_WebCore)
ADD_SUBDIRECTORY(Server_MonolithWebAPI)
ADD_SUBDIRECTORY(Scripts_JSONExprEval)
ADD_SUBDIRECTORY(Program_Config)
